# shopscale

./: .gitignore  pyproject.toml  requirements.txt  seed.py  shopscale.db
alembic/: env.py
alembic/versions/: 488811bc64fe_initial_database.py
app/: database.py  main.py  models.py  schemas.py
app/core/: config.py  middleware.py
app/routers/: auth.py  cart.py  category.py  orders.py  products.py
app/utils/: oauth2.py
tests/: conftest.py  test_auth.py  test_cart.py  test_categories.py  test_orders.py  test_products.py
